feat: Add Halloween theme, voice assistant improvements, and answer processing enhancements
- Apply Halloween theme across all frontend pages (dark background, orange accents)
- Implement voice assistant with live transcription for questions and answers
- Add auto-clearing transcription bubbles after answers complete
- Fix guest login to use GUEST_<NONCE> format for user/session IDs
- Add relevance checking for questions against current course/topic
- Implement answer paraphrasing to remove citations and provide clean responses
- Enhance lesson query processor with intent detection (slack, github, calendar, summary)
- Improve calendar integration with proper event ID and link extraction
- Update all pages with Halloween-themed styling and animations

--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -10,7 +10,7 @@
     "start": "node dist/src/server.js",
     "start:prod": "NODE_ENV=production node dist/src/server.js",
     "smoke:prod": "bash scripts/smoke-prod.sh",
-    "health": "bash curl/agentmail-health.sh",
+    "health": "bash scripts/health-check.sh",
     "send:self": "bash curl/agentmail-send-self.sh",
     "replay:webhook": "bash curl/replay-webhook.sh",
     "send:test": "bash curl/agentmail-send.sh",
@@ -31,8 +31,8 @@
     "retrieval:answer": "bash curl/retrieval-answer.sh",
     "retrieval:hs:seed": "bash curl/retrieval-hs-seed.sh",
     "forum:post": "bash curl/forum-post.sh",
-    "demo:happy": "bash scripts/demo-happy.sh",
-    "test:all": "bash scripts/test-all-apis.sh",
+    "demo:happy": "bash scripts/demo-happy-paths.sh",
+    "test:all": "npm run test:unified && npm run test:concurrent && npm run test:extensive && npm run test:robustness",
     "test:api": "bash scripts/test-all-apis.sh",
     "test:edge": "bash scripts/test-edge-cases.sh",
     "test": "bash scripts/test-all-apis.sh && bash scripts/test-edge-cases.sh",
@@ -46,15 +46,12 @@
     "test:unified-action": "bash scripts/test-unified-action-service.sh",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "health": "bash scripts/health-check.sh",
     "health:check": "bash scripts/health-check.sh",
     "demo": "bash scripts/demo-happy-paths.sh",
     "test:unified": "bash scripts/test-unified-api-comprehensive.sh",
     "test:concurrent": "bash scripts/test-concurrent-agents.sh",
     "test:extensive": "bash scripts/test-unified-api-extensive.sh",
-    "test:robustness": "bash scripts/test-robustness.sh",
-    "test:all": "npm run test:unified && npm run test:concurrent && npm run test:extensive && npm run test:robustness",
-    "demo:happy": "bash scripts/demo-happy-paths.sh"
+    "test:robustness": "bash scripts/test-robustness.sh"
   },
   "keywords": [],
   "author": "",
@@ -66,6 +63,7 @@
     "@sentry/node": "^10.22.0",
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/marked": "^5.0.2",
     "body-parser": "^1.20.2",
     "composio-core": "^0.5.39",
     "compression": "^1.7.4",
@@ -76,6 +74,7 @@
     "jsonwebtoken": "^9.0.2",
     "livekit-client": "^2.15.14",
     "livekit-server-sdk": "^2.14.0",
+    "marked": "^16.4.1",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.4",
     "node-fetch": "^3.3.2",
