--- a/apps/apex-academy/package.json
+++ b/apps/apex-academy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sutradhar/nuxt",
+  "name": "@apex-academy/frontend",
   "version": "1.0.0",
   "private": true,
   "type": "module",
